--- a/src/shared/_material-ui-colors.scss
+++ b/src/shared/_material-ui-colors.scss
@@ -82,9 +82,14 @@ $material-color-red-900: #b71c1c;
 $material-color-red-a200: #ff5252;
 $material-color-red-a700: #d50000;
 
+$material-color-yellow: #ffeb3b;
 $material-color-yellow-100: #fff9c4;
 $material-color-yellow-200: #fff59d;
 $material-color-yellow-300: #fff176;
+$material-color-yellow-400: #ffee58;
+
+$material-color-yellow-500: #{$material-color-yellow};
+
 $material-color-yellow-700: #fbc02d;
 $material-color-yellow-800: #f9a825;
 $material-color-yellow-900: #f57f17;
