Update popover scss to use aliased import

--- a/src/popover.scss
+++ b/src/popover.scss
@@ -1,4 +1,4 @@
-@use "./shared/index.scss" as shared;
+@use "@shared" as shared;
 
 /* # API specific Feature To ONLY TAKE API BETWEEN = and --- */
 /* NAME: SELECTED-TRANSCLUSION-PREVIEW CSS SNIPPET */
