--- a/src/plugin-stylings/templater.scss
+++ b/src/plugin-stylings/templater.scss
@@ -1,4 +1,34 @@
 @use "@shared" as shared;
+
+// # HEADER ITEMS
+
+.templater-inline {
+  --material-color-amber-400: #ffca28;
+
+  $_header_bg: shared.$material-color-purple-900;
+  $_header_color: var(--material-color-amber-400);
+  background: #{$_header_bg};
+
+  span.cm-templater-command.cm-templater-execution-tag,
+  .cm-templater-closing-tag.cm-templater-command.cm-templater-execution-tag {
+    color: #{$_header_color};
+    background: $_header_bg;
+  }
+  span.cm-null.cm-templater-command,
+  span.cm-comment.cm-templater-command {
+    background: $_header_bg;
+    color: #{$_header_color};
+    text-decoration: underline;
+  }
+
+  span.cm-templater-opening-tag {
+    color: #{$_header_color};
+    background: $_header_bg;
+  }
+}
+
+// # LIST ITEMS
+
 @mixin evenListColorAndBackground {
   background: shared.$material-color-purple-200;
 
@@ -10,10 +40,14 @@
   background: shared.$material-color-purple-100;
 
   .cm-comment.cm-templater-command {
-    color: shared.$material-color-purple-700;
+    color: shared.$material-color-blue-900;
   }
 }
 .cm-contentContainer {
+  .templater-command-bg.cm-line[style*="padding-inline-start: 16px;"] {
+    font-weight: bold;
+    color: shared.$bookSource;
+  }
   .templater-command-bg.cm-line[style*="padding-inline-start: 16px;"]:nth-child(
       odd
     ) {
@@ -27,13 +61,15 @@
 }
 
 // 2nd level
-.templater-command-bg.cm-line[style*="padding-inline-start: 36px;"]:nth-child(
-    even
-  ) {
+.templater-command-bg.cm-line:is(
+    [style*="padding-inline-start: 36px;"],
+    [style*="padding-inline-start: 34px;"]
+  ):nth-child(even) {
   @include evenListColorAndBackground();
 }
-.templater-command-bg.cm-line[style*="padding-inline-start: 36px;"]:nth-child(
-    odd
-  ) {
+.templater-command-bg.cm-line:is(
+    [style*="padding-inline-start: 36px;"],
+    [style*="padding-inline-start: 34px;"]
+  ):nth-child(odd) {
   @include oddListColorAndBackground();
 }
