Add 2 more colors

--- a/src/shared/_material-ui-colors.scss
+++ b/src/shared/_material-ui-colors.scss
@@ -72,6 +72,8 @@ $material-color-purple-900: #4a148c;
 
 $material-color-deep-purple-200: #b39ddb;
 
+$material-color-purple-a100: #ea80fc;
+$material-color-purple-a200: #e040fb;
 // $material-color-deep-purple-a400: #651fff;  // terrible color on dark mode
 
 $material-color-red-100: #ffcdd2;
