Move views indentified scss to its own folder

--- a/src/by-views/views--center-split.scss/index.scss
+++ b/src/by-views/views--center-split.scss/index.scss
@@ -1,4 +1,4 @@
-@use "../shared/index.scss" as shared;
+@use "@shared" as shared;
 
 // # minimal theme overrides
 // ## type:override mode:off name:middle-right-center-split-rightest-right.jpeg
