--- a/src/by-views/views--right-split.scss/right-split.scss
+++ b/src/by-views/views--right-split.scss/right-split.scss
@@ -1,4 +1,4 @@
-@use "../shared/index.scss" as shared;
+@use "@shared" as shared;
 // # SHARED between splits.
 .workspace-split:is(.mod-left-split, .mod-right-split) {
   .view-content {
