--- a/src/by-views/views--left-split.scss/index.scss
+++ b/src/by-views/views--left-split.scss/index.scss
@@ -1,4 +1,4 @@
-@use "../shared/index.scss" as shared;
+@use "@shared" as shared;
 @forward "./file-explorer.scss";
 
 // left-split-right-border-when-dock-opens.jpeg
