--- a/src/shared/_material-ui-colors.scss
+++ b/src/shared/_material-ui-colors.scss
@@ -104,6 +104,10 @@ $material-color-amber-50: #fff8e1;
 $material-color-teal-a400: #1de9b6;
 $material-color-cyan-a400: #00e5ff;
 $material-color-lime-a400: #c6ff00;
+
+$material-color-indigo-700: #303f9f;
+$material-color-indigo-900: #1a237e;
+
 // $material-color-indigo-a400: #3d5afe; // bad color on dark mode
 // rogybiv was a christian thing. there's only five base colors
 // red orange yellow green blue (ignore indigo and violet when thinking about colors)
