--- a/src/experiments/index.scss
+++ b/src/experiments/index.scss
@@ -1,5 +1,5 @@
 @forward "./progress-bar/progress-bar.scss";
-
+@forward "./reading-view.scss";
 // # [[inbox-list-of-experiments,ad-finem-Prototyping-ObsidianAPI-via-DataviewJS#Dv Rows With Numbers Using Indexa Custom Class]] */
 // Increment the value of section counter by 1
 .indexa {
