--- a/src/tab-bar.scss
+++ b/src/tab-bar.scss
@@ -1,3 +1,8 @@
 .view-action[aria-label^="Current view: editing"] {
   display: none;
 }
+
+// # Task Genius Artifact
+.view-action[aria-label^="Filter Tasks"] {
+  display: none;
+}
