--- a/src/embed-blocks.scss
+++ b/src/embed-blocks.scss
@@ -123,7 +123,7 @@
   padding-left: 1em !important;
   .markdown-preview-view.markdown-rendered {
     // padding so that the click to enter the embed link doesn't interfere with buttons.
-    padding-top: 1.4em;
+    // padding-top: 1em;
   }
 }
 
